-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
None
-
-
1ebc1fd63 (dev)
- With "positionAbsolute" property set to true, in vector assigned to "position" property X and Z values of 1.0 do not translate to the end of X and Z axes. Y coordinate works as expected and 1.0 means the end of Y axis.
- Changing "scaling" property brings no effect.
Collective minimal reproducible example:
import QtQuick import QtGraphs Window { id: root width: 1280 height: 960 visible: true title: qsTr("Graphs 3D - Bar Graph") Custom3DLabel { id: label text: "3DLabel text" facingCamera: true positionAbsolute: true position: Qt.vector3d(1.0, 1.0, 1.0) scaling: Qt.vector3d(0.6, 0.6, 0.6) } Bars3D { id: barGraph anchors.fill: parent Component.onCompleted: { addCustomItem(label) } } }
For Gerrit Dashboard: QTBUG-131138 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
604573,3 | Fix position of custom label | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
604935,1 | Fix position of custom label | 6.8 | qt/qtgraphs | Status: ABANDONED | 0 | 0 |