Fix position of custom label

Pick-to: 6.8
Fixes: QTBUG-131138
Change-Id: I37de4f8b82714371d386b8e3e89e1069ab7eaf8a
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>